# fastapi-legos

./: README.md
auth/: .env.local  pyproject.toml
auth/auth/: __main__.py
auth/auth/app/: boot.py  config.py  router.py
auth/auth/data/: auth_repository.py
auth/auth/domain/: dto.py  usecase.py
caching/: docker-compose.yml  pyproject.toml
caching/caching/: __main__.py
caching/caching/app/: boot.py  router.py
caching/caching/data/: cache.py  repository.py
caching/caching/domain/: usecase.py
doctype/: pyproject.toml
doctype/boilerplate/: cookiecutter.json
doctype/boilerplate/{{ cookiecutter.name }}/: {{ cookiecutter.name }}.py
doctype/template/: __main__.py
doctype/template/app/: boot.py  router.py
doctype/template/doctype/task/: task.py
favorites/: pyproject.toml
favorites/favorites/: __main__.py
favorites/favorites/app/: boot.py  router.py
favorites/favorites/data/: favorite_repository.py  video_repository.py
favorites/favorites/domain/: dto.py  entity.py  error.py  usecase.py
gaguba/: README.md  pyproject.toml
gaguba/gaguba/: __main__.py
gaguba/gaguba/app/: boot.py  router.py
gaguba/gaguba/data/: payment_repository.py
gaguba/gaguba/domain/: dto.py  entity.py  usecase.py
role/: pyproject.toml
role/role/: __main__.py
role/role/app/: auth.py  boot.py  router.py
template/: pyproject.toml
template/template/app/: boot.py  router.py
upload/: .gitignore  pyproject.toml
upload/upload/: __main__.py
upload/upload/app/: boot.py  router.py
