[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
cookiecutter = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
